FB-18 | Service | Implement update product feature and test in rest api service adapter.